# pomme

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  pyproject.toml  untitled.txt
.github/workflows/: build-and-test.yaml  build-and-test.yml  build-joss-paper.yaml  upload-to-anaconda.yaml  upload-to-pypi.yaml
conda/: conda_build_config.yaml  meta.yaml
docs/: .readthedocs.yml  conf.py  index.rst  requirements.txt
docs/API/: index.rst
docs/background/: index.rst  radiative_transfer.ipynb
docs/examples/: 3D_known_model.ipynb  3D_known_model_large.ipynb  3D_model.ipynb  ATOMIUM.ipynb  Benchmark_1.ipynb  Benchmark_2.ipynb  DSHARP.ipynb  R_Aquilae.ipynb  regularisation.ipynb  simple.ipynb  spherical_symmetry.ipynb
docs/src/: conf.py  index.rst  requirements.txt
docs/src/API/: index.rst  p3drolso.haar.rst  p3droslo.forward.rst  p3droslo.haar.rst  p3droslo.lines.rst  p3droslo.loss.rst  p3droslo.model.rst  p3droslo.object.rst  p3droslo.observation.rst  p3droslo.plot.rst  p3droslo.reconstruction.rst  p3droslo.rst  p3droslo.utils.rst  pomme.forward.rst  pomme.lines.rst  pomme.observation.rst  pomme.plot.rst
docs/src/background/: bayesian_reconstruction.ipynb  forward_problem.ipynb  index.rst  inverse_problem.ipynb  probabilistic_reconstruction.ipynb  radiative_transfer.ipynb  spectral_line_formation.ipynb
docs/src/benchmarks/: Benchmark_0.ipynb  Benchmark_1.ipynb  Benchmark_2.ipynb  function_accuracy.ipynb
docs/src/examples/: 3D_model.ipynb  (+34 more)
joss/: paper.bib  paper.md
joss/paper_1/: paper.bib  paper.md
src/p3droslo/: __init__.py  forward.py  haar.py  hydrodynamics.py  lines.py  loss.py  model.py  observation.py  plot.py  utils.py
src/pomme/: __init__.py  forward.py  lines.py  loss.py  model.py  object.py  observation.py  plot.py  utils.py
tests/: Adam.ipynb  NLTE.py  RotatingModel.py  test_model.py  test_observation.py  test_utils.py
tests/data/: header_only.fits
(+78 files in other folders)
