[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pomme"
version = "0.0.17"
description = "Probabilistic 3D Reconstruction of Spectral Line Observations."
readme = "README.md"
authors = [{ name = "Frederik De Ceuster", email = "frederik.deceuster@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Image Processing",
]
keywords = ["3D Reconstruction", "Astrophysics", "Astronomy"]
dependencies = [
    "matplotlib",
    "astroquery",
    "radio-beam",
    "ipywidgets",
    "astropy",
    "torch>=2.0.0",
    "numpy",
    "numba",
    "tqdm",
    "h5py",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "bumpver", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/Magritte-code/pomme"

[tool.bumpver]
current_version = "0.0.17"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = false
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/pomme/__init__.py" = ["{version}"]
"conda/meta.yaml" = ['version: "{version}"']
"README.md" = ['(version {version})']
"docs/src/index.rst" = ['(version {version})']

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = [".", "src"]

#[project.scripts]
#realpython = "reader.__main__:main"
